# d2lros2-humble-code

./: .clang-format  .gitignore
chapt1/: hello_fishros.cpp  hello_fishros.py
chapt10/chapt10_ws/src/cartographer_ros/cartographer_ros/: CMakeLists.txt
chapt10/chapt10_ws/src/fishbot_cartographer/: fishbot_map.pgm  fishbot_map.yaml
chapt2/basic/: CMakeLists.txt  Makefile  first_node  first_ros2_node.cpp  second_ros2_node.py
chapt2/chapt2_ws/src/example_cpp/: CMakeLists.txt  package.xml
chapt2/chapt2_ws/src/example_cpp/src/: node_01.cpp  node_03.cpp
chapt2/chapt2_ws/src/example_py/: package.xml  setup.cfg  setup.py
chapt2/chapt2_ws/src/example_py/example_py/: node_02.py  node_04.py
chapt2/chapt2_ws/src/example_py/test/: test_copyright.py  test_pep257.py
chapt3/chapt3_ws/src/example_interfaces_rclcpp/: CMakeLists.txt  package.xml
chapt3/chapt3_ws/src/example_interfaces_rclcpp/src/: example_interfaces_control_01.cpp  example_interfaces_robot_01.cpp
chapt3/chapt3_ws/src/example_interfaces_rclpy/: package.xml  setup.cfg  setup.py
chapt3/chapt3_ws/src/example_interfaces_rclpy/example_interfaces_rclpy/: example_interfaces_control_02.py  example_interfaces_robot_02.py
chapt3/chapt3_ws/src/example_ros2_interfaces/: CMakeLists.txt  package.xml
chapt3/chapt3_ws/src/example_ros2_interfaces/msg/: RobotPose.msg  RobotStatus.msg
chapt3/chapt3_ws/src/example_ros2_interfaces/srv/: LinearMotion.srv  MoveRobot.srv
chapt3/chapt3_ws/src/example_service_rclcpp/: CMakeLists.txt  package.xml
chapt3/chapt3_ws/src/example_service_rclcpp/src/: service_client_01.cpp  service_server_01.cpp
chapt3/chapt3_ws/src/example_service_rclpy/: package.xml  setup.cfg  setup.py
chapt3/chapt3_ws/src/example_service_rclpy/example_service_rclpy/: service_client_02.py  service_server_02.py
chapt3/chapt3_ws/src/example_topic_rclcpp/: CMakeLists.txt  package.xml
chapt3/chapt3_ws/src/example_topic_rclcpp/src/: topic_publisher_01.cpp  topic_subscribe_01.cpp
chapt3/chapt3_ws/src/example_topic_rclpy/: package.xml  setup.cfg  setup.py
chapt3/chapt3_ws/src/example_topic_rclpy/example_topic_rclpy/: topic_publisher_02.py  topic_subscribe_02.py
chapt3/dds_ws/: fastrtps.repos
chapt4/chapt4_ws/: README.md
chapt4/chapt4_ws/src/example_action_rclcpp/: CMakeLists.txt  package.xml
chapt4/chapt4_ws/src/example_action_rclcpp/src/: action_control_01.cpp  action_robot_01.cpp  action_robot_cpp.cpp  robot.cpp
chapt4/chapt4_ws/src/example_action_rclpy/: package.xml  setup.cfg  setup.py
chapt4/chapt4_ws/src/example_action_rclpy/example_action_rclpy/: robot.py  (+2 more)
chapt4/chapt4_ws/src/example_parameters_rclcpp/: CMakeLists.txt  package.xml
chapt4/chapt4_ws/src/example_parameters_rclpy/: package.xml  setup.cfg  setup.py
chapt4/chapt4_ws/src/robot_control_interfaces/: CMakeLists.txt  package.xml
chapt5/chapt5_ws/: README.md
chapt5/chapt5_ws/src/robot_startup/: CMakeLists.txt  package.xml
fishbot_ws/: README.md
fishbot_ws/src/fishbot_cartographer/launch/: cartographer.launch.py
fishbot_ws/src/fishbot_navigation2/param/: fishbot.yaml
fishbot_ws/src/nav2_pure_pursuit_controller/: package.xml
fishbot_ws/src/nav2_pure_pursuit_controller/src/: pure_pursuit_controller.cpp
(+9 files in other folders)
